--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -110,7 +110,7 @@
 
             <%= link_to designed_trips_path, class: "dropdown-item" do %>
               <i class="fa-solid fa-road"></i>
-              <b> Travel Plans <span class="badge badge-primary"> <%= current_user.trips.count %></span> </b>
+              <b> Travel Plans <span class="badge badge-primary"> <%= current_user.trips_count %></span> </b>
             <% end %>
 
             <%= link_to my_clients_orders_path, class: "dropdown-item" do %>
@@ -132,7 +132,7 @@
            <div aria-labelledby="operatorDropdown" class="dropdown-menu dropdown-menu-right">
             <%= link_to brought_trips_path, class: "dropdown-item" do %>
               <i class="fa-solid fa-basket-shopping"></i>
-              <b> Brought Trips <span class="badge badge-success"> <%= current_user.orders.count %></span> </b>
+              <b> Brought Trips <span class="badge badge-success"> <%= current_user.orders_count %></span> </b>
             <% end %>
 
             <%= link_to pending_review_trips_path, class: "dropdown-item" do %>
