update some front end views for trip,order and itinerary, fixed some front end logics to make the views more readable

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,12 +1,13 @@
 <p id="notice"><%= notice %></p>
 <%# dynamic title for orders page %> 
 <% content_for :title do %>
-  Travel Fun/All orders
+  Travel Fun/<%= action_name.humanize%> orders
 <% end %>
 
 <h3>
   <div class="text-center mt-3">
-   Order Lists:
+    <%= action_name.humanize%>
+    orders
     <div class="badge badge-info">
       <%= @orders.count %>
     </div>
