--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -110,7 +110,7 @@
 
             <%= link_to designed_trips_path, class: "dropdown-item" do %>
               <i class="fa-solid fa-road"></i>
-              <b> Travel Plans <span class="badge badge-primary"> <%= current_user.trips_count %></span> </b>
+              <b> Created Travels <span class="badge badge-primary"> <%= current_user.trips_count %></span> </b>
             <% end %>
 
             <%= link_to my_clients_orders_path, class: "dropdown-item" do %>
