update sorting function for side searching bar

--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -36,14 +36,17 @@
       <%= f.label :duration %>
       <%# f.select :duration_cont,"5-Days-4-Nights","4-Days-3-Nights","3-Days-2-Nights","1-Day", include_blank: true, class: 'form-control form-control-sm' %>
       <%= f.select :duration_cont, Trip.durations,include_blank: true %>
-
-      <%= f.label :price %>
+      <div class="row"></div>
       <%= f.search_field :price_eq, placeholder: 'Price', class: 'form-control form-control-sm' %>
-      
-      <%# here actually will search users email, but I give it label is Operator, when I create users role, this search bar can let client searching travel plan by operator's username %>
-      <%= f.label :Operator %>
-      <%= f.search_field :user_email_cont, placeholder: 'Email', class: 'form-control form-control-sm' %>
-      
+      <%= sort_link(@ransack_trips, :price) %>
+    
+      <div class="row"></div>
+      <%= sort_link(@ransack_trips, :average_rating, "Top Rated") %>
+
+      <div class="row"></div>
+      <%= sort_link(@ransack_trips, :orders_count, "Most Popular") %>
+
+      <div class="row"></div>
       <%= f.submit %>
     <% end %>
     <%= link_to 'refresh', @ransack_path %>
