update styling trips and itineraries front end views, also set up bootstrap Carousel

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -41,7 +41,7 @@
       </th>
       <th>
       <i class="fa-solid fa-map"></i>
-      <%= sort_link(@q, :trip_title)%>
+      <%= sort_link(@q, :trip_title,"Trips")%>
       </th>
       <th>
       <i class="fa-solid fa-business-time"></i>
