--- a/app/views/itineraries/_itinerary.html.erb
+++ b/app/views/itineraries/_itinerary.html.erb
@@ -5,24 +5,26 @@
 
      <%# each itinerary title is card header  %>
     <div class="card-header">
-      <div class="fa-solid fa-bus"></div>
-        <%= link_to itinerary.title, trip_itinerary_path(@trip, itinerary) %>
+      <i class="fa-solid fa-bus"></i>
+       
+        <%= link_to itinerary.title, trip_itinerary_path(@trip, itinerary), {"data-toggle" => "collapse", "href" => "#collapseExample", "aria-expanded" =>"false", "aria-controls" => "collapseExample"} %>
+      
+      <div class="float-right">
+        <%# buttons for edit and destory  %>
+        <%# users authorization check %>
+        <% if policy(itinerary).edit? %>
+        <%# below routes is also nested path %>
+        <%= link_to 'Edit', edit_trip_itinerary_path(@trip, itinerary), class: 'btn btn-sm btn-warning' %>
+        <%= link_to 'Destroy', [@trip, itinerary], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+        <% end %>
+      </div>
     </div>
 
     <%# each itinerary content is card body  %>
-        <div class="card-body">
+      <div class="card-body collapse" id="collapseExample">
         <%= itinerary.content %>
-        </div>
-        
-    <%# buttons for card footer  %>
-    <%# users authorization check %>
-     <% if policy(itinerary).edit? %>
-    <div class="card-footer">
-    <%# below routes is also nested path %>
-    <%= link_to 'Edit', edit_trip_itinerary_path(@trip, itinerary), class: 'btn btn-sm btn-warning' %>
-    <%= link_to 'Destroy', [@trip, itinerary], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
-    </div>
-    <% end %>
+      </div>
+      
 </div>
 
 <%# below p tag is for blank space %>
