--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -14,23 +14,56 @@
 
     <%# devide each trip view table to 2 parts, good for front end %>
     <div class="row">
-        <div class="col-lg-6">
-        <%# render partial page trip for exactly trip %>
-        <%= render 'trips/trip', trip: @trip %>
-        </div>
+        <%# left part start: %>
+        <div class="col-lg-7 order-1 order-lg-1">
+          <%# start new jumbotron field for each trips page %>
+            <div class="jumbotron">
+                <h3 >
+                    <i class="fa-solid fa-cart-flatbed-suitcase text-primary"></i>
+                    <%= @trip.title %>
+                </h3>
+                <p></p>
+                <div> 
+                    <i class="fa-solid fa-circle-info text-primary"> </i>
+                    <span class="font-weight-bold"> Brief Information: </span>
+                    <p></p>
+                    <%= @trip.brief_info %>
+                </div> 
+            </div>
+          <%# end jumbotron %>
 
-        <div class="col-lg-6"> 
         <%# the below front end view is add itinerary can click, after click, the url link nested route  %>
-        <%# trip_itinerary_path(@trip,@itinerary) => localhost:3000/trips/trip.id/itinerary/itinerary.id %>
-        <%# only trip owner(creator) can see this button %>
-        <% if policy(@trip).owner? %> 
-        <%= link_to 'Add New Itinerary', new_trip_itinerary_path(@trip, @itinerary), class: 'btn btn-success btn-sm btn-block mb-3' %>
-        <% end %>
-
+        <%# trip_itinerary_path @trip,@itinerary => localhost:3000/trips/trip.id/itinerary/itinerary.id %>
         <%# render partial page itinerary for exactly trip %>
-        <% @itineraries.each do |itinerary|%>
-        <%= render 'itineraries/itinerary', itinerary: itinerary %>
-        <% end %>
+            <h4 class="pl-2">
+            <i class="fa-solid fa-list"></i> <%=@trip.itineraries_count%> Day Tours
+            </h4>
+            <p></p>
+            
+            <div>
+            <% @itineraries.each do |itinerary|%>
+            <%= render 'itineraries/itinerary', itinerary: itinerary %>
+            <% end %>
+            </div>
+
+            <h4 class="pl-2">
+            <i class="fa-solid fa-list"></i> <%= @orders_with_reviews.count %> Reviews
+            </h4>
+             <% @orders_with_reviews.each do |order|%>
+                <%= render 'orders/order', order: order%>
+            <% end %>
+            <p></p>
         </div>
+        <%# left part end %>
+
+        <%# right part start: %>
+        <div class="col-lg-5 order-0 order-lg-1">
+        <%# render partial page trip for exactly trip %>
+            <div class="sticky-top">
+            <%= render 'trips/trip', trip: @trip%>
+            </div>
+        </div>
+        <%# right part end %>
+        
     </div>
 </div>
