create charts controller and routes for chart data eager loading

--- a/app/views/static_pages/analytics.html.erb
+++ b/app/views/static_pages/analytics.html.erb
@@ -1,14 +1,15 @@
 <div class="mt-5">
-    <h4>User Created</h4>
-    <%= line_chart @users.group_by_hour(:created_at).count %>
+    <h4 class="text-center">User Created</h4>
+    <%= line_chart charts_users_per_day_path %>
 </div>
 
 <div class="mt-5">
-    <h4>Orders Created</h4>
-    <%= bar_chart @orders.group_by_day(:created_at).count %>
+    <h4 class="text-center">Orders Created</h4>
+    <%#  bar_chart @orders.group_by_day(:created_at).count %>
+    <%= bar_chart charts_orders_per_day_path %>
 </div>
 
 <div class="mt-5">
-    <h4>Trips popularity</h4>
+    <h4 class="text-center">Trips popularity</h4>
     <%= column_chart @orders.joins(:trip).group(:'trips.title').count %>
 </div>
