--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -22,7 +22,7 @@
      <%# collection: :"5-Days-4-Nights", :"4-Days-3-Nights", :"3-Days-2-Nights", :"1-Day"%>
      <%= f.input :duration, collection: Trip.durations, include_blank: true %>
      <%= f.input :price %>
-
+     <%= f.input :published %>
   </div>
    
    <%# add bootsrap for edit update button %>
