--- a/app/views/trips/_trip.html.erb
+++ b/app/views/trips/_trip.html.erb
@@ -54,25 +54,53 @@
     <%# users authorization check %>
     <%# if current user is client, then they do need have the below views %>
     <% if current_user %>
-    <% if policy(trip).edit? %> 
-    <%# each trip created time and user is card footer  %>
-    <div class="card-footer">
-      <div class="far fa-clock"></div>
-      Created at: <%= trip.created_at.strftime('%d-%b-%Y') %>
-      <div class="row"></div>
-      <div class="fa-solid fa-user-astronaut"></div>
-      <%# .username is method in user model, cam makes website more readable %>
-      Created by: <%= link_to trip.user.username, user_path(trip.user)%> 
-    </div>
+      <% if policy(trip).edit? %> 
 
-    <div class="card-footer">
-      <%= link_to 'Edit', edit_trip_path(trip), class: 'btn btn-sm btn-info' %>
-      <%= link_to 'Destroy', trip, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
-      <%# only trip owner creator can see this button %>
+      <%# each trip created time and user is card footer  %>
+      <%# card footer 01 for trips created time and creater username %>
+      <div class="card-footer">
+        <div class="far fa-clock"></div>
+        Created at: <%= trip.created_at.strftime('%d-%b-%Y') %>
+        <div class="row"></div>
+        <div class="fa-solid fa-user-astronaut"></div>
+        <%# .username is method in user model, cam makes website more readable %>
+        Created by: <%= link_to trip.user.username, user_path(trip.user)%> 
+      </div>
+
+      <%# card footer 02 for buttons %>
+      <%# only trip owner creator can see this buttons %>
       <% if policy(trip).owner? %> 
-      <%= link_to 'Add New Itinerary', new_trip_itinerary_path(trip, @itinerary), class: 'btn btn-success btn-sm' %>
+      <div class="card-footer">
+        <%= link_to 'Edit', edit_trip_path(trip), class: 'btn btn-sm btn-info' %>
+        <%= link_to 'Destroy', trip, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+        <%= link_to 'Add Itinerary', new_trip_itinerary_path(trip, @itinerary), class: 'btn btn-sm btn-success ' %>
+      </div>
       <% end %>
-    </div>
-    <% end %>
+      <%# card footer 03 for badges %>
+      <div class="card-footer">
+        <span class="font-weight-bold">Status:</span>
+        <% if trip.published? %>
+          <span class="badge badge-success">Published</span>
+        <% else %>
+          <span class="badge badge-warning">Unpublished</span>
+        <% end %>
+        <% if trip.approved? %>
+          <span class="badge badge-success">Approved</span>
+        <% else %>
+          <span class="badge badge-danger">Unapproved</span>
+        <% end %>
+        </div>
+      <%# card footer 04 for approve or not button, only admin role can see this view base on trip policy approve setting%>
+      <% if policy(trip).approve? %>
+      <div class="card-footer">
+          <% if trip.approved? %>
+            <%= link_to 'Unapprove',unapprove_trip_path(trip), method: :patch, class: 'btn btn-sm btn-danger'%>
+          <% else %>
+            <%= link_to 'Approve',approve_trip_path(trip), method: :patch, class: 'btn btn-sm btn-primary'%>
+          <% end %>
+      </div>
+      <% end %>
+
+     <% end %>
     <% end %>
 </div>
