--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -63,7 +63,7 @@
   </div>
    <%# bootstrap pagy render the navigation links is doesn't work, will have error so I have to choose the basic pagy render link and overwrite the style  %>
     <%# found the bug and bootstrap pagy is work again %>
-  <div class="mx-auto" style="width: 200px;"> <%== pagy_bootstrap_nav(@pagy) %> </div>
+  <div> <%== pagy_bootstrap_nav(@pagy) %> </div>
 </div>
 
 <br/>
