--- a/app/views/static_pages/track_activities.html.erb
+++ b/app/views/static_pages/track_activities.html.erb
@@ -12,17 +12,45 @@
     </div>
   </div>
 </h3>
+
 <p></p>
+
 <ul class="list-group">
   <% @activities.each do |activity| %>
     <li class="list-group-item">
-      <%= activity.id %>
+     <%# front end styling for model type, model_icon is helper method %>
+      <%= model_icon(activity.trackable_type) %>
       <%= activity.trackable_type %>
-      <%= activity.trackable_id %>
-      <%= link_to activity.trackable, activity.trackable %>
+      :
+      <%#activity.trackable_id %>
+      <% if activity.trackable_type == 'Itinerary'%>
+        <% if Itinerary.where(id: activity.trackable_id).present? %>
+          <%= link_to activity.trackable, trip_itinerary_path(activity.trackable.trip, activity.trackable) %>
+        <% else %>
+          Itinerary was deleted
+        <% end %>
+      <% else %>
+        <%= link_to activity.trackable, activity.trackable %>
+      <% end %>
+      -
       <%= activity.key %>
-      <%= activity.parameters %>
-      <%= activity.owner %>
+      <%# front end styling for create, read, update and delete activities, activity_crud_icon is helper method %>
+      <%= activity_crud_icon(activity.key.match(/\.(.*)/)[1]) %>
+      by
+      <%# activity.owner %>
+      :
+      <%= link_to activity.owner, user_path(activity.owner) %>
+      <% if activity.parameters.any? %>
+        <%= activity.parameters %>
+      <% end %>
+      -
+      <%= time_ago_in_words(activity.created_at) %>
+      ago, Date:
+      <%= activity.created_at.strftime('%d-%m-%Y') %>
     </li>
   <% end %>
 </ul>
+
+<p></p>
+
+<div> <%== pagy_bootstrap_nav(@pagy) %> </div>
