--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -59,7 +59,7 @@
         <%# right part start: %>
         <div class="col-lg-5 order-0 order-lg-1">
         <%# render partial page trip for exactly trip %>
-            <div class="sticky-top">
+            <div>
             <%= render 'trips/trip', trip: @trip%>
             </div>
         </div>
