--- a/app/views/trips/_trip.html.erb
+++ b/app/views/trips/_trip.html.erb
@@ -42,11 +42,12 @@
 
     <div class="card-footer ">
       <div class="row"></div>
-      <%# trip_helper method %>
+      <%# trip_helper methods %>
       <%= order_button(trip)%>
       
       <div class="row"></div>
       <%= review_button(trip)%>
+
     </div>
   
 
