--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -17,7 +17,7 @@
        <p> 
        <i class="fa-brands fa-gratipay text-danger"></i>
        <span class="font-weight-bold"> Rating: &nbsp</span> 
-        <% order.rating.times do %>
+        <% order.rating.to_i.times do %>
             <i class="fa-solid fa-heart text-danger"></i>
         <% end %>
         </p>
