--- a/app/views/trips/_trip.html.erb
+++ b/app/views/trips/_trip.html.erb
@@ -56,7 +56,6 @@
     <%# if current user is client, then they do need have the below views %>
     <% if current_user %>
       <% if policy(trip).destory? %> 
-
       <%# each trip created time and user is card footer  %>
       <%# card footer 01 for trips created time and creater username %>
       <div class="card-footer">
@@ -67,13 +66,16 @@
         <%# .username is method in user model, cam makes website more readable %>
         Created by: <%= link_to trip.user.username, user_path(trip.user)%> 
       </div>
-       <% end %>
+    <% end %>
       <%# card footer 02 for buttons %>
       <%# only trip owner creator can see this buttons and if the trip has related any order, can see the below buttons %>
-      <% if policy(trip).owner? %> 
+      <% if policy(trip).edit? %> 
       <div class="card-footer">
         <%= link_to 'Edit', edit_trip_path(trip), class: 'btn btn-sm btn-info' %>
+        <%# only for destory button, if the trip related with order, then cannot be deleted %>
+        <% if policy(trip).owner? %> 
         <%= link_to 'Destroy', trip, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+        <% end %>
         <%= link_to 'Add Itinerary', new_trip_itinerary_path(trip, @itinerary), class: 'btn btn-sm btn-success ' %>
       </div>
       <% end %>
