use silly wat to fix heroku deploy issue, first I drop heroku db and reset, don't use seed file, create 3 different user roles, admin, operator and client, everything is ok now

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -19,7 +19,8 @@
     <p></p>
     <%#  f.input :description %>
     <%# start: for action text form view %>
-     
+    <p></p>
+    <%= f.label :description %>
     <%= f.rich_text_area :description %>
     <%# description cannot be blank at front end view %>
     <small><%= f.error :description, class: 'text-danger' %></small> 
