--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :title %>
 
-    <%= f.label :avatar %>
+    <%# f.label :avatar %>
     <p></p>
     <% if @trip.avatar.attached? %>
       <%=image_tag @trip.avatar, width:"200px"%>
@@ -14,8 +14,8 @@
       <%= @trip.avatar.filename%>
     <% end %>
     <p></p>
-    <%= f.file_field :avatar%>
-    <small><%= f.error :avatar, class: 'text-danger' %></small> 
+    <%# f.file_field :avatar%>
+    <%= f.input :avatar %>
     <p></p>
     <%#  f.input :description %>
     <%# start: for action text form view %>
@@ -27,7 +27,8 @@
     <%# end: for action text form view %>
 
     <%= f.label :brief_info %>
-    <%= f.rich_text_area :brief_info %> 
+    <%= f.rich_text_area :brief_info %>
+    <small><%= f.error :brief_info, class: 'text-danger' %></small> 
      <%# collection: ["English", "Chinese(Simplified)", "Chinese(Traditional)", "Korean", "Japanese"] %>
      <%# include_blank allows blank area when we creating new trip, more flexable %>
      <%= f.input :language, collection: Trip.languages, include_blank: true %>
