--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,7 @@
 <%# bootstrap navbar format + check if user login then display account settings and sign out link  %>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#019267">
   <a class="navbar-brand" href="/">
+    <%=image_tag "Logo.png", size:"30x30", alt: "logo", class:"rounded" %>
     Travel Fun
   </a>
   <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
