--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -1,6 +1,16 @@
-<h1>StaticPages#privacy_policy</h1>
+<h1 class="mt-3">Privacy Policy</h1>
 <p>Welcome to Privacy Policy Page</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pellentesque rutrum pellentesque. Vivamus egestas diam odio, nec imperdiet ante tristique vel. Nam eu urna turpis. Nulla condimentum ante et erat porttitor, eget lacinia arcu viverra. Sed ante ante, tristique at tempus eget, elementum nec mi. Nullam mi elit, scelerisque vel viverra ac, tincidunt sed mauris. Nam risus sapien, malesuada ut feugiat id, pharetra quis turpis. Aenean vulputate sapien interdum quam tincidunt, quis semper nunc vestibulum. Maecenas dignissim, elit quis congue dictum, eros quam efficitur orci, consequat rhoncus libero augue et odio. Pellentesque mollis vulputate accumsan. Morbi eget nulla eu purus tristique tincidunt. Duis ultricies est at augue venenatis, sit amet pretium orci condimentum. Duis pulvinar est augue, nec varius lorem imperdiet non. Morbi in purus eget ipsum eleifend placerat.
 
+Mauris at porttitor justo, sit amet consequat urna. Donec eleifend enim metus, a pretium erat molestie ac. Mauris tellus neque, faucibus quis sodales at, semper et metus. Aliquam erat volutpat. Nam sodales eros sed consequat tincidunt. Donec nunc nulla, accumsan a viverra vitae, sagittis vel lectus. Aliquam nulla erat, pharetra vel feugiat vitae, sollicitudin a sem. Morbi quis mollis eros. Sed id ligula eget mauris tempor ullamcorper id vel mauris.
+
+Nullam scelerisque posuere nisl a congue. Nullam magna orci, fermentum a enim eget, eleifend ullamcorper elit. Suspendisse lectus ipsum, feugiat id purus a, gravida viverra dolor. Duis interdum nisl placerat dignissim commodo. Nulla nisl nisi, volutpat vel iaculis quis, suscipit ac turpis. Vivamus suscipit tellus ultrices odio suscipit, id cursus ante tincidunt. Sed pretium bibendum sapien, vitae posuere nisl suscipit eget. Aenean vel imperdiet tellus. Aliquam pulvinar risus neque, eget sodales eros feugiat et. Nam dui purus, dapibus varius rhoncus vel, ornare eu mi. Suspendisse a velit a ex ultrices placerat. Quisque tincidunt vitae nibh id tempor.
+
+Vestibulum tempus magna at dapibus tempus. Morbi enim augue, elementum ut scelerisque a, suscipit at nisl. Pellentesque consectetur id ex vel sagittis. Nulla libero nisl, volutpat ac dui nec, lobortis fringilla ante. Quisque tempus tristique felis ut placerat. Morbi finibus sapien vel accumsan eleifend. Nullam fermentum malesuada ante, a imperdiet lorem. Aliquam eget tortor quis mauris euismod egestas.
+
+Ut vulputate ante vel nunc ultrices, at pulvinar justo mollis. Donec nec efficitur elit. Sed in urna a nulla ornare porttitor in quis elit. Curabitur mi risus, tincidunt sed nunc non, tincidunt accumsan magna. Aenean vitae ultricies tellus. In metus elit, porta eu dictum sed, varius quis sem. In ante metus, fermentum sed quam ornare, congue dapibus lorem.
+
+</p>
 
 <%# home page button and fontasesome icons %>
 <%= link_to root_path do %>  
