--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,14 +17,31 @@
  @import 'bootstrap/scss/bootstrap';
  @import './actiontext.scss';
 
- .page-footer {
+body {
+    background: #FFFBE9;
+}
+
+.page-footer {
      a {
         text-decoration: none;
      }
  }
 
- #beauty-img {
+#beauty-img {
     width: 1200px; 
     height: 400px;
     object-fit: cover;
+}
+
+#background {
+    /* The image used */
+    background-image: image-url("tas-background.jpg");
+    /* Set a specific height */
+    height: auto; 
+    // /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white; 
 }
