--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,14 @@
-<h2>Sign up</h2>
+<%# bootstrap card format %>
+<div class="card mt-3">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+  <div class="card-header">
+    <h2>Sign up</h2>
+  </div>
 
-  <div class="form-inputs">
+  <div class="card-body">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
+    <div class="form-inputs">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -19,10 +24,12 @@
     <%= recaptcha_tags %>
     <p></p>
   </div>
-
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up"%>
   </div>
-<% end %>
-<p></p>
-<%= render "devise/shared/links" %>
+  <% end %>
+  </div>
+  <div class="card-footer">
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
