update navbar text for more logical

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -117,7 +117,7 @@
           <div aria-labelledby="operatorDropdown" class="dropdown-menu dropdown-menu-right">
             <%= link_to new_trip_path, class: "dropdown-item" do %>
               <i class="fa-solid fa-folder-plus"></i>
-              <b> New Trip </b>
+              <b>Create New Trip </b>
             <% end %>
 
             <%= link_to designed_trips_path, class: "dropdown-item" do %>
